# tsdf_voxel_render

./: .gitignore  CMakeLists.txt  README.md
data/: para_cameras.txt
data/frame_0/depth_yuv/: 0.yuv  1.yuv  2.yuv  3.yuv  4.yuv  5.yuv  6.yuv  7.yuv  8.yuv  9.yuv
include/: config.h  cuda_kernel.h  typedef.h  utils.h
include/cuda/: cuda_kernel.cuh  typedef.cuh
src/: main.cpp  utils.cpp
src/cuda/: CMakeLists.txt  volume_render.cu  volume_render_kernel.cu  voxel_render.cu
